Fix the default suru on small screens

--- a/static/sass/_pattern_strip.scss
+++ b/static/sass/_pattern_strip.scss
@@ -24,6 +24,7 @@
   .p-strip--suru {
     @extend %vf-strip;
     background-blend-mode: multiply, multiply, normal, normal;
+    background-color: #772953;
     background-image:
       linear-gradient(to bottom right, rgba(228, 228, 228, .54) 0%, rgba(228, 228, 228, .54) 49.9%, rgba(228, 228, 228, 0) 50%, rgba(228, 228, 228, 0) 100%),
       linear-gradient(to bottom left, rgba(216, 216, 216, .54) 0%, rgba(216, 216, 216, .54) 49.9%, rgba(216, 216, 216, 0) 50%, rgba(216, 216, 216, 0) 100%),
@@ -56,7 +57,6 @@
 
       @media (min-width: $breakpoint-medium) {
         $padding: 6rem;
-        background-image: linear-gradient(-89deg, #e95420 0%, #772953 85%);
         background-position: 0% 0%, top right, right 0 bottom $padding, right bottom, 0% 0%;
         background-size: 100% calc(100% - #{$padding}), 50% 100%, 100% $padding, 100% $padding, auto;
         margin-bottom: -$padding;
